added latest comic routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<h1>
-  Welcome to {{ title }}!
-</h1>
-<nav> 
+
+<div class = "topnav"> 
+  <div class = "title">CHUCKIE THE CAT</div>
   <a routerLink="/comics">Comics</a> 
   <a routerLink="/archive">Comic Archive</a>
-</nav> 
+</div> 
 <router-outlet></router-outlet>
