--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@
   }
   
   /* Style the links inside the navigation bar */
-  .topnav a {
+  .tabs a {
     float: right;
     color: #E0E0B0;
     text-align: center;
@@ -13,7 +13,7 @@
     font-size: 17px;
   }
 
-  .title {
+  .title a {
     float: left;
     text-align: center;
     color: #E0E0B0;
@@ -23,15 +23,19 @@
     font-style: normal;
     font-weight: bold;
   }
+
+  .title a:hover{
+    color: #ddd;
+  }
   
   /* Change the color of links on hover */
-  .topnav a:hover {
+  .topnav .tabs a:hover {
     background-color: #ddd;
     color: black;
   }
   
   /* Add a color to the active/current link */
-  .topnav a.active {
+  .topnav .tabs a.active {
     background-color: #4CAF50;
     color: white;
   }
