--- a/src/app/comic/comic.component.css
+++ b/src/app/comic/comic.component.css
@@ -1,3 +1,8 @@
+body{
+
+
+}
+
 .comic-info{ 
     font-size: 30px; 
     display: flex;
@@ -15,6 +20,8 @@ img{
     max-width: 75%;
     margin: 0 auto;
     display: block;
+    border: 3px solid;
+    border-color:  #E0E0B0;
 }
 
 
