--- a/src/app/comic/comic.component.css
+++ b/src/app/comic/comic.component.css
@@ -1,7 +1,3 @@
-body{
-
-
-}
 
 .comic-info{ 
     font-size: 30px; 
@@ -9,22 +5,25 @@ body{
     justify-content: space-around;
 }
 
-.comic-container{ 
-    margin: 0 auto; 
-    width: 1000px; /*this should be size of comic image*/   
 
-
-}
-
-img{
-    max-width: 75%;
+.comic-image{
+    max-width: 100%;
     margin: 0 auto;
     display: block;
     border: 3px solid;
     border-color:  #E0E0B0;
 }
 
+.comic{
+    width: 100%;
+}
 
+.comic-container{ 
+    width: 50%;
+    margin: 0 auto;  /*this should be size of comic image*/   
+    height: 100%;
+
+}
 
 .nav-buttons{
     text-align: center;
@@ -32,7 +31,19 @@ img{
 
 }
 
-button{
-    /* padding: 2% 2%; */
+.chuckie-side{
+ 
+    position: fixed;
+    padding-left: 72%;
+    bottom: 0;
+    max-width: 30%;
 }
+
+.chuckie-img{
+    max-width: 99.9996%;
+    max-height: auto;
+
+}
+
+
 
