--- a/src/app/comic/comic.component.html
+++ b/src/app/comic/comic.component.html
@@ -1,6 +1,5 @@
 
-
-<div class = "comic-container"> 
+<div class = "comic-container">
    <div class = "comic-info">
       <div class = "comic-title"> 
          {{comic.title | uppercase }}
@@ -10,10 +9,16 @@
       </div>
    </div>
    
-   <div class = "comic-image"><img src = {{comic.path}}></div>
+  <!--- <div class = "comic-image"><img src = {{comic.path}}></div>-->
+   <div class = "comic-image"><img class = "comic" 
+      src = "../../assets/fear001.jpg"></div>
    <div class = "nav-buttons">
       <button (click) = "previousComic()"> Previous </button>
       <button (click) = "randComic()"> Random </button> 
       <button (click) = "nextComic()"> Next </button>
    </div>
+</div>
+
+<div class = "chuckie-side">
+   <img class ="chuckie-img" src = '../../assets/chuckie-zombie-right.png'>
 </div>
