fix undefined error remove mock-comic remove erroneous comic-archive info

--- a/src/app/comic/comic.component.html
+++ b/src/app/comic/comic.component.html
@@ -1,7 +1,7 @@
 
 
 
-<div class = "comic-container">
+<div class = "comic-container" *ngIf="comic">
   
    <div class = "comic-info">
       <div class = "comic-title"> 
