add about component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <a routerLink='comics/latest'> CHUCKIE THE CAT</a>
   </div>
   <div class = "tabs">
+    <a routerLink="/about">About</a>
     <a routerLink="/archive">Comic Archive</a>
     <a routerLink="/comics">Comics</a> 
   </div>
