--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+
+body{
+    font-family: 'Courier New', Courier, monospace; 
+    background-color: #605B5B; 
+  }
+button {
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 16px;
+    padding: 1.25%;
+    border-color: #333
+  }
